Adding intron view

--- a/resources/insert_project.yaml
+++ b/resources/insert_project.yaml
@@ -21,7 +21,7 @@ EXPERIMENTS:
     TPMRATIONCUTOFF: 2.0
     PVALUECUTOFF: 1E-6
     RCUTOFF: -1.0
-    DIFFEXPIR: requirements/diffexpir_ctrl_cll.txt
+    DIFFEXPIR: resources/diffexpir_ctrl_cll.txt
   - NAME: CLL Mut vs Ctrl
     DESCR: Control vs mutated CLL samples
     COND1: Mut
@@ -29,7 +29,7 @@ EXPERIMENTS:
     TPMRATIONCUTOFF: 2.0
     PVALUECUTOFF: 1E-6
     RCUTOFF: -1.0
-    DIFFEXPIR: requirements/diffexpir_ctrl_mut.txt
+    DIFFEXPIR: resources/diffexpir_ctrl_mut.txt
   - NAME: CLL Unm vs Ctrl
     DESCR: Control vs un-mutated CLL samples
     COND1: Unm
@@ -37,7 +37,7 @@ EXPERIMENTS:
     TPMRATIONCUTOFF: 2.0
     PVALUECUTOFF: 1E-6
     RCUTOFF: -1.0
-    DIFFEXPIR: requirements/diffexpir_ctrl_unm.txt
+    DIFFEXPIR: resources/diffexpir_ctrl_unm.txt
   - NAME: Mut vs Unm
     DESCR: Mutated vs un-mutated CLL samples
     COND1: Mut
@@ -45,8 +45,9 @@ EXPERIMENTS:
     TPMRATIONCUTOFF: 2.0
     PVALUECUTOFF: 1E-6
     RCUTOFF: -1.0
-    DIFFEXPIR: requirements/diffexpir_mut_unm.txt
-SAMPLE_FILE: requirements/cll_samples.tsv
+    DIFFEXPIR: resources/diffexpir_mut_unm.txt
+SAMPLE_FILE: resources/cll_samples.tsv
 # Use number from 0 to number of columns - 1 if not header in the file
 SAMPLE_NAME_COLUMN: ECGA_ID
 SAMPLE_TYPE_COLUMN: Mut_Stat
+ASSEMBLY_REPORT: resources/GCF_000001405.25_GRCh37.p13_assembly_report.txt
