Adding Docker config for container deployment

--- a/resources/Dockerfile
+++ b/resources/Dockerfile
@@ -21,6 +21,7 @@ ENV URL=https://github.com/r78v10a07/DiffExpIRWeb
 ENV DOCKYARD_SRC=DiffExpIRWeb
 ENV DOCKYARD_SRVHOME=/home/biodocker
 ENV DOCKYARD_SRVPROJ=$DOCKYARD_SRVHOME/$DOCKYARD_SRC
+ENV PYTHONPATH=$DOCKYARD_SRVHOME/$DOCKYARD_SRC/src:$PYTHONPATH
 
 WORKDIR $DOCKYARD_SRVHOME
 RUN git clone $URL
